Fix eslint rule for switch statements

--- a/.eslintrc
+++ b/.eslintrc
@@ -18,7 +18,8 @@
       "error",
       2,
       {
-        "ignoredNodes": ["TemplateLiteral *"]
+        "ignoredNodes": ["TemplateLiteral *"],
+        "SwitchCase": 1
       }
     ]
   }
