--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react-dom": "^15.0.0 || ^16.0.0",
+    "react-headroom": "^2.2.8",
+    "react-scrollspy": "^3.4.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
@@ -46,7 +48,9 @@
     "gh-pages": "^1.2.0",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-headroom": "^2.2.8",
     "react-scripts": "^1.1.4",
+    "react-scrollspy": "^3.4.0",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -54,6 +58,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
+    "smoothscroll-polyfill": "^0.4.4",
     "styled-components": "^4.3.1"
   },
   "files": [
