--- a/example/package.json
+++ b/example/package.json
@@ -6,9 +6,9 @@
   "private": true,
   "dependencies": {
     "prop-types": "^15.6.2",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts": "^1.1.4",
+    "react": "link:../node_modules/react",
+    "react-dom": "link:../node_modules/react-dom",
+    "react-scripts": "link:../node_modules/react-scripts",
     "@corey_hutcheson/reusable-react": "link:.."
   },
   "scripts": {
