--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
   },
   "peerDependencies": {
     "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0",
+    "react": "^^16.8.0",
+    "react-dom": "^^16.8.0",
     "react-headroom": "^2.2.8",
     "react-scrollspy": "^3.4.0"
   },
@@ -46,10 +46,10 @@
     "eslint-plugin-react": "^7.10.0",
     "eslint-plugin-standard": "^3.1.0",
     "gh-pages": "^1.2.0",
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
+    "react": "^16.8.3",
+    "react-dom": "^16.8.3",
+    "react-scripts": "^2.1.5",
     "react-headroom": "^2.2.8",
-    "react-scripts": "^3.0.1",
     "react-scrollspy": "^3.4.0",
     "rollup": "^0.64.1",
     "rollup-plugin-babel": "^3.0.7",
