--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
     "predeploy": "cd example && yarn install && yarn run build",
     "deploy": "gh-pages -d example/build"
   },
+  "dependencies": {
+    "react-headroom": "^2.2.8",
+    "react-scrollspy": "^3.4.0",
+    "styled-components": "^4.3.1"
+  },
   "peerDependencies": {
     "prop-types": "^15.5.4",
     "react": "^16.8.0",
-    "react-dom": "^16.8.0",
-    "react-headroom": "^2.2.8",
-    "react-scrollspy": "^3.4.0"
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@svgr/rollup": "^2.4.1",
@@ -58,8 +61,7 @@
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^1.6.2",
     "rollup-plugin-url": "^1.4.0",
-    "smoothscroll-polyfill": "^0.4.4",
-    "styled-components": "^4.3.1"
+    "smoothscroll-polyfill": "^0.4.4"
   },
   "files": [
     "dist"
