--- a/example/package.json
+++ b/example/package.json
@@ -12,8 +12,8 @@
     "prop-types": "^15.6.2",
     "react": "link:../node_modules/react",
     "react-dom": "link:../node_modules/react-dom",
-    "styled-components": "link:../node_modules/styled-components",
-    "react-scripts": "^2.1.5"
+    "react-scripts": "^2.1.5",
+    "styled-components": "link:../node_modules/styled-components"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -32,6 +32,7 @@
   "devDependencies": {
     "@storybook/addon-actions": "^5.1.8",
     "@storybook/addon-links": "^5.1.8",
+    "@storybook/addon-viewport": "^5.1.11",
     "@storybook/addons": "^5.1.8",
     "@storybook/react": "^5.1.8"
   }
